// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders correctly with default values 1`] = `
<DocumentFragment>
  .css-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-3z78jo-ItemContainer {
  display: inline;
}

.css-3z78jo-ItemContainer[aria-current='page'] {
  color: #b2b6c3;
}

.css-3z78jo-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.css-5e45t9-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-5e45t9-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-5e45t9-StyledLink>* {
  pointer-events: none;
}

.css-5e45t9-StyledLink:hover,
.css-5e45t9-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-5e45t9-StyledLink:hover .e4bq1r52,
.css-5e45t9-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-5e45t9-StyledLink:hover::after,
.css-5e45t9-StyledLink:focus::after {
  background-color: #390171;
}

.css-5e45t9-StyledLink:active {
  text-decoration-thickness: 2px;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="css-198ohfb-StyledOl e1081fv11"
    >
      <li
        aria-disabled="false"
        class="css-3z78jo-ItemContainer e1081fv10"
      >
        <a
          class="css-5e45t9-StyledLink e4bq1r50"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="css-3z78jo-ItemContainer e1081fv10"
      >
        <a
          class="css-5e45t9-StyledLink e4bq1r50"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="css-3z78jo-ItemContainer e1081fv10"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with invalid child 1`] = `
<DocumentFragment>
  .css-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="css-198ohfb-StyledOl e1081fv11"
    >
      Invalid child
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with onClick 1`] = `
<DocumentFragment>
  .css-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-3z78jo-ItemContainer {
  display: inline;
}

.css-3z78jo-ItemContainer[aria-current='page'] {
  color: #b2b6c3;
}

.css-3z78jo-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.css-5e45t9-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-5e45t9-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-5e45t9-StyledLink>* {
  pointer-events: none;
}

.css-5e45t9-StyledLink:hover,
.css-5e45t9-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-5e45t9-StyledLink:hover .e4bq1r52,
.css-5e45t9-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-5e45t9-StyledLink:hover::after,
.css-5e45t9-StyledLink:focus::after {
  background-color: #390171;
}

.css-5e45t9-StyledLink:active {
  text-decoration-thickness: 2px;
}

.css-12l1cwf-ItemContainer {
  display: inline;
  cursor: pointer;
}

.css-12l1cwf-ItemContainer[aria-current='page'] {
  color: #b2b6c3;
}

.css-12l1cwf-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.css-12l1cwf-ItemContainer[aria-disabled="true"] {
  pointer-events: none;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="css-198ohfb-StyledOl e1081fv11"
    >
      <li
        aria-disabled="false"
        class="css-3z78jo-ItemContainer e1081fv10"
      >
        <a
          class="css-5e45t9-StyledLink e4bq1r50"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="css-3z78jo-ItemContainer e1081fv10"
      >
        <a
          class="css-5e45t9-StyledLink e4bq1r50"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="css-12l1cwf-ItemContainer e1081fv10"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with selected item 1`] = `
<DocumentFragment>
  .css-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-3z78jo-ItemContainer {
  display: inline;
}

.css-3z78jo-ItemContainer[aria-current='page'] {
  color: #b2b6c3;
}

.css-3z78jo-ItemContainer:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.css-5e45t9-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
}

.css-5e45t9-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.css-5e45t9-StyledLink>* {
  pointer-events: none;
}

.css-5e45t9-StyledLink:hover,
.css-5e45t9-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #390171;
  text-decoration-color: #390171;
}

.css-5e45t9-StyledLink:hover .e4bq1r52,
.css-5e45t9-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.css-5e45t9-StyledLink:hover::after,
.css-5e45t9-StyledLink:focus::after {
  background-color: #390171;
}

.css-5e45t9-StyledLink:active {
  text-decoration-thickness: 2px;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="css-198ohfb-StyledOl e1081fv11"
    >
      <li
        aria-disabled="false"
        class="css-3z78jo-ItemContainer e1081fv10"
      >
        <a
          class="css-5e45t9-StyledLink e4bq1r50"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="css-3z78jo-ItemContainer e1081fv10"
      >
        <a
          class="css-5e45t9-StyledLink e4bq1r50"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-disabled="false"
        class="css-3z78jo-ItemContainer e1081fv10"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
